# ashok-testing-project

./: main.cpp  master_iot.ino  send_data.py
Project_Walkthrough_Actions/devel/: .catkin  .rosinstall  local_setup.sh
Project_Walkthrough_Actions/devel/include/udemy_cpp_pkg/: Navigate2DAction.h  Navigate2DActionFeedback.h  Navigate2DActionGoal.h  Navigate2DActionResult.h  Navigate2DFeedback.h  Navigate2DGoal.h  OddEvenCheckResponse.h  TurnCameraResponse.h
Project_Walkthrough_Actions/devel/lib/pkgconfig/: udemy_cpp_pkg.pc
Project_Walkthrough_Actions/devel/lib/udemy_cpp_pkg/: action_server  publisher  rpm_pub  service_client  service_server  speed_calc  subscriber  turn_camera_service_client  turn_camera_service_server
Project_Walkthrough_Actions/src/udemy_cpp_pkg/: CMakeLists.txt  package.xml
Project_Walkthrough_Actions/src/udemy_cpp_pkg/src/: service_client.cpp  service_server.cpp  turn_camera_service_server.cpp
action_project_with_image/devel/: .catkin  .rosinstall
action_project_with_image/devel/include/server_project/: ImageRotation.h  ImageRotationRequest.h  ImageRotationResponse.h
action_project_with_image/devel/lib/pkgconfig/: server_project.pc
action_project_with_image/devel/lib/server_project/: image_rotation_client  image_rotation_server
action_project_with_image/src/server_project/: CMakeLists.txt  package.xml
action_project_with_image/src/server_project/src/: image_rotation_client.cpp  image_rotation_server.cpp
action_project_with_image/src/server_project/srv/: ImageRotation.srv
amr_full_code/devel/: .catkin  .rosinstall
amr_full_code/devel/include/motor_controller/: motorfeedback.h
amr_full_code/devel/lib/pkgconfig/: auto_start.pc  demopurposeurdf.pc  motor_controller.pc  sick_safetyscanners.pc  xsens_mti_driver.pc
amr_full_code/devel/lib/sick_safetyscanners/: sick_safetyscanners_node
amr_full_code/devel/lib/xsens_mti_driver/: xsens_mti_node
amr_full_code/src/auto_start/: CMakeLists.txt
amr_full_code/src/auto_start/config/: camera_file.py  camera_file.sh  config_txt_auto_start.py  launch_motor.py  launch_motor.sh  lidar_launch.py  lidar_launch.sh  urdf_file.py  urdf_file.sh
amr_full_code/src/auto_start/scripts/: auto_start.py  song_start.py
amr_full_code/src/demopurposeurdf/: CMakeLists.txt  package.xml
amr_full_code/src/demopurposeurdf/launch/: display.launch  display_3d.launch  display_imu.launch  gazebo.launch
amr_full_code/src/demopurposeurdf/meshes/: base_foot_print.STL  lider_link.STL
amr_full_code/src/demopurposeurdf/urdf/: demopurposeurdf.csv  demopurposeurdf.urdf  demopurposeurdf_3d.urdf  demopurposeurdf_imu.urdf
amr_full_code/src/motor_controller/: CMakeLists.txt
amr_full_code/src/motor_controller/config/: config_txt.py  gmapping.yaml
amr_full_code/src/motor_controller/launch/: mapping.launch  motor_bring.launch  motor_bring_2.launch
amr_full_code/src/motor_controller/map/: first_map.pgm
amr_full_code/src/motor_controller/msg/: motorfeedback.msg
amr_full_code/src/motor_controller/scripts/: can_node_quick_stop_call.py  canopen_node_configuration.py  canopen_node_initiliazation.py  check_ros_master.py  combained_clear_storage_docker_log.py  custom_button_service_server.py  diff_tf.py  drive.py  drive_1.py  drive_d.py  drive_rtab.py  laser_scan.py  led.py  motor_encode_data.txt  odometry_check.py  protective_field_laser.py  ram_memory_shutdown_ros.py  resume_pause.py  robot_start.py  speed_protect.py  twist_to_motors.py
amr_full_code/src/xsens_ros_mti_driver/param/: xsens_mti_node.yaml
camera_server_and_client/stuck_up/devel/: .catkin  .rosinstall  local_setup.sh
camera_server_and_client/stuck_up/src/server_project/: CMakeLists.txt
camera_server_and_client/stuck_up/src/server_project/launch/: camera_launch.launch
camera_server_and_client/stuck_up/src/server_project/src/: camera_service_client.cpp  camera_service_server.cpp
camera_server_and_client/stuck_up/src/server_project/srv/: CameraControl.srv
coordinate of a robot/action_001/devel/: .catkin  local_setup.sh
coordinate of a robot/action_001/src/Package/: CMakeLists.txt  package.xml
distance to the destination/ashok_ws/devel/: .catkin  local_setup.sh
distance to the destination/ashok_ws/src/asho/: CMakeLists.txt  package.xml
distance to the destination/ashok_ws/src/asho/src/: action_client.cpp  action_server.cpp
mastering_manual/: nano.save
mastering_manual/devel/: .catkin  _setup_util.py  local_setup.sh
mastering_manual/devel/include/my_amr_pkg/: sensorData.h
mastering_manual/devel/lib/my_amr_pkg/: robot_node
mastering_manual/devel/lib/pkgconfig/: my_amr_pkg.pc
mastering_manual/src/my_amr_pkg/: CMakeLists.txt  package.xml
mastering_manual/src/my_amr_pkg/config/: robot_params.yaml
mastering_manual/src/my_amr_pkg/launch/: robot_launch.launch
mastering_manual/src/my_amr_pkg/msg/: sensorData.msg
mastering_manual/src/my_amr_pkg/src/: robot_node.cpp
simple publisher and subscriber/publisher_and_subscriber 02/devel/: .catkin  .rosinstall  local_setup.sh
simple publisher and subscriber/publisher_and_subscriber 02/src/code_pkg/: CMakeLists.txt  package.xml
simple publisher and subscriber/publisher_and_subscriber/devel/: .catkin  .rosinstall  local_setup.sh
simple publisher and subscriber/publisher_and_subscriber/src/first_try/: CMakeLists.txt  package.xml
turtlebot_test/devel/: .catkin  local_setup.sh  setup.sh
turtlebot_test/src/: map.yaml
udemy_courses/ros_2/BUMPERBOT_WS/src/bumperbot_bringup/: CMakeLists.txt
udemy_courses/ros_2/BUMPERBOT_WS/src/bumperbot_controller/: CMakeLists.txt  package.xml
udemy_courses/ros_2/BUMPERBOT_WS/src/bumperbot_description/: CMakeLists.txt  package.xml
udemy_courses/ros_2/BUMPERBOT_WS/src/bumperbot_localization/: CMakeLists.txt  package.xml
udemy_courses/ros_2/BUMPERBOT_WS/src/bumperbot_msgs/: CMakeLists.txt  package.xml
udemy_courses/ros_2/BUMPERBOT_WS/src/bumperbot_utils/: CMakeLists.txt  package.xml
unfinished/devel/: .catkin  setup.sh
unfinished/src/package/: CMakeLists.txt  package.xml
update/: mastering_manual
(+322 files in other folders)
