<?xml version="1.0"?>
<package format="2">
  <name>asho</name>
  <version>0.0.0</version>
  <description>The asho package</description>

  <maintainer email="ashokd@todo.todo">ashokd</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Dependencies -->
  <depend>actionlib_msgs</depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information here -->
  </export>
</package>
